Exercise 4 - Metrics/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert-manager-ingress
  namespace: metrics
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: alert-manager.k3s.workshop.itera.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-kube-prometheus-st-alertmanager
                port:
                  number: 9093
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: metrics
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: prometheus.k3s.workshop.itera.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-kube-prometheus-st-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: metrics
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: grafana.k3s.workshop.itera.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-kube-prometheus-stack-grafana
                port:
                  number: 80
